# learning_objectOriented_C

Human/: .gitignore
buildProjects-cmake/socialAppProjectVs/: CMakeLists.txt  README.md
buildProjects-cmake/socialAppProjectVs/include/: admin.h  adminException.h  entity.h  instagramConsole.h  post.h  postManager.h  user.h  userManager.h
buildProjects-cmake/socialAppProjectVs/src/: admin.cpp  instagramConsole.cpp  main.cpp  post.cpp  postManager.cpp  user.cpp  userManager.cpp
relation(aggr-comp)/Human/: human.h  organ.h  source.cpp
relation(aggr-comp)/shoppingCart/: source.cpp
shoppingCart/: .gitignore
